tests/fixtures/negative/003_missing_closing_brace.js
// Expected error: missing closing brace
function f() {
  return 42;
